# point_cloud_io

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
demo/: cow.launch  ply_publisher.rviz
example/: point_cloud_io.rviz  some_cows.bag
examples/: copyright_notice.txt  cow.ply  point_cloud_io.rviz  some_cows.bag
include/ply_publisher/: PlyPublisher.hpp
include/point_cloud_io/: Read.hpp  Write.hpp
launch/: example.launch  example_read.launch  example_write.launch
src/: PlyPublisher.cpp  Read.cpp  Write.cpp  ply_publisher_node.cpp  read_node.cpp  write_node.cpp
