<?xml version="1.0"?>
<package>
  <name>point_cloud_io</name>
  <version>0.1.0</version>
  <description>Tools to either read and publish or subscribe and write PointCloud2 messages.</description>
  <maintainer email="pfankhauser@anybotics.com">Peter Fankhauser</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/ethz-asl/point_cloud_io</url>
  <url type="bugtracker">http://github.com/ethz-asl/point_cloud_io/issues</url>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
  <author email="diethelm@mavt.ethz.ch">Remo Diethelm</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
