<?xml version="1.0"?>

<package format="2">

  <name>point_cloud_io</name>
  <version>0.3.5</version>
  <description>Tools to either read and publish or subscribe and write PointCloud2 messages.</description>

  <license>BSD</license>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>

  <url type="website">http://github.com/anybotics/point_cloud_io</url>
  <url type="bugtracker">http://github.com/anybotics/point_cloud_io/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>

</package>
